--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#81D8D0</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#81D8D0</color>
-   #3F51B5
+    <color name="bg">#FEFFD6</color>
 </resources>
