--- a/app/src/main/res/layout/record_dm_checkregular.xml
+++ b/app/src/main/res/layout/record_dm_checkregular.xml
@@ -22,9 +22,11 @@
                 android:text="日期："
                 style="@style/dmTitle"/>
             <EditText
+                android:id="@+id/date"
                 android:layout_width="match_parent"
                 android:layout_weight="3"
                 android:layout_height="20dp"
+                style="@style/edittext"
                 android:background="@drawable/edittextstyle"
                 />
             <ImageView
@@ -32,7 +34,8 @@
                 android:layout_height="fill_parent"
                 android:id="@+id/imagecalender"
                 android:src="@drawable/calendar"
-                android:onClick="datePick"/>
+                android:stateListAnimator="@drawable/btn_selector"
+                android:onClick="onBtnCalendarClick"/>
         </TableRow>
 
     </TableLayout>
@@ -43,6 +46,34 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                >
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/change"
+                    android:id="@+id/imageView_record_dm_submit"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentLeft="true"
+                    android:stateListAnimator="@drawable/btn_selector"
+                    android:visibility="invisible"/>
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="50dp"
+                    android:id="@+id/imageView_record_dm_change"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:src="@drawable/submit"
+                    android:stateListAnimator="@drawable/btn_selector"
+                    android:onClick="onSubmit"/>
+
+
+            </RelativeLayout>
+
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -126,25 +157,30 @@
                         android:layout_weight="1"
                         android:layout_height="50dp"
                         android:background="@drawable/edittextstyle"
-                    />
+                        android:id="@+id/break_sugar_pre"
+                        style="@style/edittext"/>
+
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_weight="1"
                         android:layout_height="50dp"
                         android:background="@drawable/edittextstyle"
-                        />
+                        android:id="@+id/break_sugar_post"
+                        style="@style/edittext"/>
+
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_weight="1"
                         android:layout_height="50dp"
                         android:background="@drawable/edittextstyle"
-                        />
+                        android:id="@+id/break_insulin"/>
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_weight="1"
                         android:layout_height="50dp"
                         android:background="@drawable/edittextstyle"
-                        />
+                        android:id="@+id/break_press"
+                        style="@style/edittext"/>
                 </TableRow>
 
             <TableRow
@@ -160,25 +196,29 @@
                     android:layout_weight="1"
                     android:layout_height="50dp"
                     android:background="@drawable/edittextstyle"
-                    />
+                    android:id="@+id/launch_sugar_pre"
+                    style="@style/edittext"/>
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_weight="1"
                     android:layout_height="50dp"
                     android:background="@drawable/edittextstyle"
-                    />
+                    android:id="@+id/launch_sugar_post"
+                    style="@style/edittext"/>
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_weight="1"
                     android:layout_height="50dp"
                     android:background="@drawable/edittextstyle"
-                    />
+                    android:id="@+id/launch_insulin"
+                    style="@style/edittext"/>
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_weight="1"
                     android:layout_height="50dp"
                     android:background="@drawable/edittextstyle"
-                    />
+                    android:id="@+id/launch_press"
+                    style="@style/edittext"/>
             </TableRow>
 
         <TableRow
@@ -194,25 +234,29 @@
                 android:layout_weight="1"
                 android:layout_height="50dp"
                 android:background="@drawable/edittextstyle"
-                />
+                android:id="@+id/dinner_sugar_pre"
+                style="@style/edittext"/>
             <EditText
                 android:layout_width="match_parent"
                 android:layout_weight="1"
                 android:layout_height="50dp"
                 android:background="@drawable/edittextstyle"
-                />
+                android:id="@+id/dinner_sugar_post"
+                style="@style/edittext"/>
             <EditText
                 android:layout_width="match_parent"
                 android:layout_weight="1"
                 android:layout_height="50dp"
                 android:background="@drawable/edittextstyle"
-                />
+                android:id="@+id/dinner_insulin"
+                style="@style/edittext"/>
             <EditText
                 android:layout_width="match_parent"
                 android:layout_weight="1"
                 android:layout_height="50dp"
                 android:background="@drawable/edittextstyle"
-                />
+                android:id="@+id/dinner_press"
+                style="@style/edittext"/>
         </TableRow>
                 <TableRow
                     android:layout_marginTop="15dp">
@@ -258,44 +302,25 @@
                         android:layout_weight="1"
                         android:layout_height="50dp"
                         android:background="@drawable/edittextstyle"
-                        />
+                        android:id="@+id/sleep_sugar"
+                        style="@style/edittext"/>
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_weight="1"
                         android:layout_height="50dp"
                         android:background="@drawable/edittextstyle"
-                        />
+                        android:id="@+id/sleep_insulin"
+                        style="@style/edittext"/>
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_weight="1"
                         android:layout_height="50dp"
                         android:background="@drawable/edittextstyle"
-                        />
+                        android:id="@+id/sleep_press"
+                        style="@style/edittext"/>
 
                 </TableRow>
             </TableLayout>
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                >
-                <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/submit"
-                    android:id="@+id/imageView_record_dm_submit"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentLeft="true"/>
-
-                <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="50dp"
-                    android:id="@+id/imageView_record_dm_change"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentRight="true"
-                    android:src="@drawable/change"/>
-
-
-            </RelativeLayout>
 
         </LinearLayout>
     </ScrollView>
