--- a/app/src/main/res/layout/record_main.xml
+++ b/app/src/main/res/layout/record_main.xml
@@ -19,18 +19,10 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="15dp"
         android:layout_marginTop="80dp"
+        android:onClick="btnPersonalData"
+        android:stateListAnimator="@drawable/btn_selector"
         />
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="80dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginBottom="15dp"
-        android:src="@drawable/manage"
-        android:id="@+id/imageViewmainmanage"
-        android:layout_gravity="center_horizontal"
-        android:onClick="btnDmManage"
-        />
+
 
     <ImageView
         android:layout_width="wrap_content"
@@ -39,7 +31,9 @@
         android:layout_marginRight="40dp"
         android:src="@drawable/diet"
         android:id="@+id/imageViewmaindiet"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:onClick="btnAnalysis"
+        android:stateListAnimator="@drawable/btn_selector"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
