--- a/app/src/main/res/layout/shoot_post.xml
+++ b/app/src/main/res/layout/shoot_post.xml
@@ -21,16 +21,17 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:id="@+id/imageView5"
-            android:src="@drawable/post"
-            android:scaleType="fitXY"
+            android:src="@drawable/camera"
+            android:scaleType="center"
             android:layout_centerVertical="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"/>
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:inputType="textMultiLine"
             android:ems="10"
+            android:gravity="start"
             android:id="@+id/editText13"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
@@ -70,10 +71,9 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
-            android:src="@drawable/navigation"/>
+            android:src="@drawable/navigation"
+            android:onClick="onLocationRequireClick"/>
     </LinearLayout>
-
-
 
 
     <LinearLayout
@@ -113,7 +113,7 @@
             android:id="@+id/imageButton2"
             android:layout_gravity="center_vertical"
             android:src="@drawable/sline"
-            android:onClick="btnTwitterShare"/>
+            android:onClick="btnLineShare"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -123,7 +123,7 @@
             android:id="@+id/imageButton3"
             android:layout_gravity="center_vertical"
             android:src="@drawable/stwitter2"
-            android:onClick="btnInstagramShare"/>
+            android:onClick="btnTwitterShare"/>
 
     </LinearLayout>
 
