--- a/app/src/main/res/layout/shoot_wait.xml
+++ b/app/src/main/res/layout/shoot_wait.xml
@@ -3,30 +3,51 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="15dp"
-    android:background="#feffd6">
-
+    android:background="#feffd6"
+                android:focusableInTouchMode="true">
+    <ImageView
+        android:id="@+id/photo"
+        android:layout_width="match_parent"
+        android:layout_height="350dp"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/camera"
+        />
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="100dp">
-
+        android:layout_below="@id/photo"
+        >
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:id="@+id/name"
+            android:background="@drawable/edittextstyle"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:hint="請填入名稱"
+            android:maxLines="1"
+            android:singleLine="true"
+            />
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:layout_margin="10dp"
+            android:layout_height="50dp"
+            android:layout_margin="5dp"
             android:id="@+id/imageView_wait"
-            android:src="@drawable/wait"/>
+            android:src="@drawable/wait"
+            android:stateListAnimator="@drawable/btn_selector"
+            android:onClick="onNotHelpClick"/>
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:layout_margin="10dp"
+            android:layout_height="50dp"
+            android:layout_margin="5dp"
             android:id="@+id/imageView_help"
-            android:src="@drawable/help"/>
+            android:src="@drawable/help"
+            android:stateListAnimator="@drawable/btn_selector"
+            android:onClick="onHelpClick"/>
 
     </LinearLayout>
 
